<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">First app</string>

    <!--main -->
    <string name="main_btn_calc_title">Calculator</string>
    <string name="main_btn_gallery_title">Gallery</string>
    <string name="main_btn_tiles_title">Tiles menu</string>
    <string name="main_calendar_title">holiday calendar</string>
    <string name="main_btn_animation_title">Lottie animation</string>
    <string name="main_btn_cat_title">cats list</string>
    <string name="main_tb_title">Menu</string>
    <string name="main_btn_pictures_title">Pictures</string>

    <!-- calc -->
    <string name="calc_btn_minus" translatable="false">-</string>
    <string name="calc_btn_result" translatable="false">=</string>
    <string name="calc_btn_zero" translatable="false">0</string>
    <string name="calc_btn_c" translatable="false">C</string>
    <string name="calc_btn_plus" translatable="false">+</string>
    <string name="calc_btn_nine" translatable="false">9</string>
    <string name="calc_btn_eight" translatable="false">8</string>
    <string name="calc_btn_seven" translatable="false">7</string>
    <string name="calc_btn_divide" translatable="false">/</string>
    <string name="calc_btn_six" translatable="false">6</string>
    <string name="calc_btn_five" translatable="false">5</string>
    <string name="calc_btn_four" translatable="false">4</string>
    <string name="calc_btn_multiply" translatable="false">*</string>
    <string name="calc_btn_three" translatable="false">3</string>
    <string name="calc_btn_two" translatable="false">2</string>
    <string name="calc_btn_one" translatable="false">1</string>
    <string name="calc_btn_comma" translatable="false">,</string>
    <string name="calc_def_comma" translatable="false">.</string>
    <string name="calc_tb_title">Calculator</string>

    <!-- calc`s error massage  -->
    <string name="wrong_math_sequence">Error! Check expression!</string>

    <!-- gallery -->
    <string name="gal_tb_title">Gallery</string>

    <!-- gall -->
    <string name="viewer_btn_next_title">Next</string>
    <string name="viewer_om_item_drawable">Drawable</string>
    <string name="viewer_om_item_assets">Assets</string>
    <string name="viewer_om_item_internet">Internet</string>
    <string name="viewer_tb_title_viewer">Viewer</string>

    <!-- gall`s context menu -->
    <string name="context_menu_cropping_circle_title">Circle</string>
    <string name="context_menu_color_title">Color</string>
    <string name="context_menu_blur_title">Blur</string>
    <string name="context_menu_cropping_rect_title">Rectangle</string>
    <string name="context_menu_cropping_round_corners_title">Rounded corners</string>
    <string name="context_menu_cropping_title">Cropping</string>
    <string name="context_menu_color_sat_min_title">Saturation 0%</string>
    <string name="context_menu_color_sat_half_title">Saturation 50%</string>
    <string name="context_menu_color_sat_max_title">Saturation 100%</string>
    <string name="context_menu_blur_normal_title">Light</string>
    <string name="context_menu_blur_solid_title">Soft</string>
    <string name="context_menu_blur_outer_title">Normal</string>
    <string name="context_menu_blur_inner_title">Hard</string>

    <!-- redactor -->
    <string name="redactor_tb_title">simple SVG redactor</string>

    <!-- tiles -->
    <string name="tiles_user_title">Hello User!</string>
    <string name="tiles_balance_title">balance: 1000$</string>
    <string name="tiles_journal_title">Journal</string>
    <string name="tiles_payments_title">Payments</string>
    <string name="tiles_basket_title">Payment box</string>
    <string name="tiles_charity_title">Charity</string>
    <string name="tiles_settings_title">Settings</string>
    <string name="tiles_exit_title">Exit</string>
    <string name="tiles_support_title">Support</string>

    <!-- cat list -->
    <string name="cat_list_btn_title">List</string>
    <string name="cats_list_toolbar_title">Cats List</string>
</resources>