<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiles_background"
    tools:context=".Tiles">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@android:color/tertiary_text_light"/>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_20dp"
        android:text="@string/tiles_user_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_20dp"
        android:layout_marginTop="18dp"
        android:text="@string/tiles_balance_title"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorLink"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_5dp"
        android:layout_marginEnd="@dimen/default_margin_20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_active_black_36dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_5dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@android:drawable/ic_input_add" />


    <com.gonchar.project.firstapp.utils.SquareButton
        android:id="@+id/journal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_15dp"
        android:text="@string/tiles_journal_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/deep_green"
        app:layout_constraintEnd_toStartOf="@id/payments"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:drawableTop="@drawable/ic_timeline_black_48dp"
        android:background="@drawable/round_button"
        />

    <com.gonchar.project.firstapp.utils.SquareButton
        android:id="@+id/payments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_15dp"
        android:layout_marginTop="4dp"
        android:drawableTop="@drawable/ic_account_balance_black_48dp"
        android:foregroundGravity=""
        android:gravity="center"
        android:text="@string/tiles_payments_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/deep_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/journal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@drawable/round_button"
        />

    <Button
        android:id="@+id/basket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tiles_basket_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/deep_green"
        app:layout_constraintVertical_weight="3"
        android:layout_margin="@dimen/default_margin_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journal"
        app:layout_constraintBottom_toTopOf="@+id/charity"
        android:background="@drawable/round_button"
        android:drawableTop="@drawable/ic_add_shopping_cart_black_48dp"/>

    <Button
        android:id="@+id/charity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin_15dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_loyalty_black_36dp_1"
        android:text="@string/tiles_charity_title"
        android:textStyle="bold"
        android:textColor="@color/deep_green"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basket"
        app:layout_constraintVertical_weight="1"
        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tiles_settings_title"
        android:textStyle="bold"
        android:textColor="@color/deep_green"
        app:layout_constraintVertical_weight="1"
        android:layout_margin="@dimen/default_margin_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charity"
        app:layout_constraintBottom_toTopOf="@id/exit"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_settings_applications_black_36dp"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin_15dp"
        android:text="@string/tiles_exit_title"
        android:textStyle="bold"
        android:textColor="@color/deep_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/support"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintVertical_weight="1"
        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/support"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin_15dp"
        android:layout_marginBottom="@dimen/default_margin_15dp"
        android:layout_marginEnd="@dimen/default_margin_15dp"
        android:text="@string/tiles_support_title"
        android:textStyle="bold"
        android:textColor="@color/deep_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/exit"
        app:layout_constraintTop_toTopOf="@+id/exit"
        app:layout_constraintVertical_weight="1"
        android:drawableStart="@drawable/ic_perm_phone_msg_black_36dp"
        android:background="@drawable/round_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>